--- a/gb/24/7/13/n14290118.md
+++ b/gb/24/7/13/n14290118.md
@@ -137,7 +137,7 @@
 <p>川普在声明中说：“我感谢美国特勤局、所有执法部门对刚刚在宾州巴特勒枪击事件的迅速反应。最重要的是，我要向在集会中遇难者的家人、以及另一名重伤者的家人表示哀悼。</p>
 <p>“在我们国家发生这样的事情真是难以置信。</p>
 <p>“目前（我们）对枪手的信息一无所知，他已经死亡。我被一颗子弹击中，子弹穿透了我的右耳上部。我立即意识到出了问题，因为我听到了嗖嗖声、枪声，并立即感觉到子弹撕裂皮肤的痛感。我流了很多血，所以我当时就意识到发生了什么。上帝保佑美国！”</p>
-<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://d1u99il8548gs4.cloudfront.net/B2npozeZm"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
+<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/L3kpozeZo"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
 <p>— Anthony Guglielmi (@SecretSvcSpox) <ahref="https://twitter.com/SecretSvcSpox/status/1812288378596982908?ref_src=twsrc%5Etfw">July 14, 2024</a></p></blockquote>
 <h2>特勤局声明：枪手被击毙 造成1死3伤</h2>
 <p>美国特勤局通讯主管安东尼·古列尔米（Anthony Guglielmi）在美东时间晚9点发出声明称，枪手被特勤局击毙，造成1死3伤。</p>
@@ -218,7 +218,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290834.md#1">川普遭遇暗杀未遂事件 详细时间线剖析</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290709.md#1">【秦鹏观察】川普遇袭早有预言 两照片进历史</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/1/n10014980.md#1" target="_blank">林辉：文革荒诞事 误损毛像引出大祸端</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/2/n11494526.md#1" target="_blank">英国女士秘鲁探险 偶遇大法后改变人生</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/10/n11444363.md#1" target="_blank">共产暴政录：中共积极响应北塔山入侵事件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/22/n3688691.md#1" target="_blank">不再对强盗说“谢谢”</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
